Introduction of the security configuration

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.graphql.websocket.path=/graphql
 spring.graphql.graphiql.enabled=true
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://securetoken.google.com/quacker-4dbc8
+
